--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 		<init-param>
 
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.mad322.rest</param-value>
+			<param-value>com.midTerm.rest</param-value>
 		</init-param>
 
 		<load-on-startup>1</load-on-startup>
